fixed carousel buttons that was causing an overflow

--- a/style.css
+++ b/style.css
@@ -210,6 +210,9 @@ body {
 #interests {
     background-color: #545e59;
 	scroll-margin-top:64px;
+	max-width: 100vw;
+	margin: 0;
+	padding: 0;
 }
 .glide__slide {
     list-style: none;
@@ -250,8 +253,9 @@ body {
 }
 #carousel2 {
 	position: relative;
-    width: 100vw;
+    max-width: 100vw;
     height: fit-content;
+	overflow-x: hidden;
 }
 #slides-container {
 	position: relative;
@@ -260,13 +264,12 @@ body {
 	width: 100%;
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
 	scroll-behavior: smooth;
+	overflow: hidden;
 	margin-top: 1rem;
+	max-width: 100vw;
 }
 .slide {
-	grid-column: 1;
-    grid-row: 1;
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -274,6 +277,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	max-width: 100vw;
 }
 .slide img {
 	width:  100%;
@@ -282,8 +286,11 @@ body {
 }
 #car-buttons {
 	position: absolute;
+	padding: 0;
+	margin: 0 auto;
 	top: 50%;
 	width: 100%;
+	max-width: 99vw;
 	height: fit-content;
 	display: flex;
 	justify-content: space-between;
